# mypkg

./: .package.xml.swp  README.md  package.xml  setup.py
.github/workflows/: test.yml
install/: local_setup.sh  setup.ps1  setup.sh
install/mypkg/share/mypkg/: package.sh  package.xml
launch/: talk_listen.launch.py
log/: latest_build
mypkg/: chiba_weather_info.py  listener.py  package.xml  setup.py  sotobo_line_stations.py  talker.py  tokyo_station_delay_info.py  tokyo_traffic_info.py  weather_info.py
mypkg/.github/workflows/: test.yml
mypkg/mypkg/: talker.py
person_msgs/: CMakeLists.txt  package.xml
test/: test.bash
test/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
test/log/: latest_build
